# expensec-project

flasklogin/: pyproject.toml  wsgi.py
flasklogin/flask_logins/: foo.db
flasklogin/flask_logins/templates/: login.jinja2
