[tool.poetry]
name = "flasklogin"
version = "0.1.0"
description = ""
authors = ["#"]
maintainers = ["#"]
license = "MIT"
readme = "README.md"
homepage = "#"
repository = "#"
documentation = "#"
keywords = [
    "Flask",
    "Flask-Login",
    "Authentication",
    "Users",
    "Accounts"
]

[tool.poetry.dependencies]
python = "^3.9"
flask_sqlalchemy = "*"
flask_login = "*"
flask_assets = "*"
pymysql = "*"
flask_wtf = "*"
python-dotenv = "*"
email_validator = "*"
uWSGI = "*"
Flask = "*"
lessc = "^0.1.3"

[tool.poetry.dev-dependencies]
lesscpy = "*"
cssmin = "*"
jsmin = "*"
isort = "*"
black = "*"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/Yesh246/expensec-project/issues"
